fix: border card dark mode lebih kalem (#223a5e)

--- a/css/custom.css
+++ b/css/custom.css
@@ -51,7 +51,7 @@ textarea.form-control {
 }
 
 .dark-mode .card {
-  border: 2px solid #4a90e2 !important;
+  border: 2px solid #223a5e !important;
 }
 .btn:hover, .btn:focus {
   transform: scale(1.07);
